# PianoAudioProcessor

./: CMakeLists.txt  README.md
myAudio/: AudioFinder.cpp  AudioFinder.h  CallbackFunctions.cpp  CallbackFunctions.h
myGui/: GuiHandler.cpp  GuiHandler.h  SpectroImageMaker.cpp  SpectroImageMaker.h
noteLogic/: MyFilter.cpp  NoteData.cpp  NoteData.h  NoteFileHandler.cpp  NoteFileHandler.h  NoteHistory.cpp  NoteHistory.h  PianoLogic.cpp  PianoLogic.h  SpectroHandler.cpp  SpectroHandler.h
tests/: UnitTests.cpp
